[UPDATE] - adding new grid for services

--- a/static/services/index.html
+++ b/static/services/index.html
@@ -70,18 +70,48 @@
         <div class="container">
             <div class="row style">
                 <div class="col">
-                    <img class="img-fluid" src="/img/mentoria.gif" alt="">
+                    <div class="card" style="width: 18rem;">
+                        <img style="height: 131px;" src="/img/mentoria.gif" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Mentoria e Consultoria</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                    </div>
                 </div>
+                <div class="space"></div>
                 <div class="col">
-                    <img class="img-fluid" src="/img/iot.gif" alt="">
+                    <div class="card" style="width: 18rem;">
+                        <img style="height: 131px;" src="/img/iot.gif" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Sistemas Iot</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                    </div>
                 </div>
+                <div class="space"></div>
                 <div class="col">
-                    3 of 3
+                    <div class="card" style="width: 18rem;">
+                        <img style="height: 131px;" src="/img/dese.gif" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Desenvolvimento web e mobile</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="row style">
+            <div class="row" style="width: 288px;">
                 <div class="col">
-                    1 of 2
+                    <div class="row row-cols-1 row-cols-md-2">
+                        <div class="col mb-4">
+                            <div class="card" style="width: 288px;">
+                                <img style="width: 288px;" src="/img/dese.gif" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Sistemas inteligentes e Analise de dados</h5>
+                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
