[update] - services page finalized

--- a/static/services/index.html
+++ b/static/services/index.html
@@ -67,9 +67,44 @@
         </div>
     </nav>
     <header class="masthead text-center">
-        <div class="container">
-            <div class="row style">
-                <div class="col">
+
+        <div class="row">
+            <div class="col">
+                <img style="height: 131px;" src="/img/mentoria.gif" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Mentoria e Consultoria</h5>
+                    <p class="card-text">Ajudamos você a alcançar seus objetivos com o diagnóstico e formulação de soluções.</p>
+                </div>
+            </div>
+            <div class="space"></div>
+            <div class="col">
+                <img style="height: 131px;" src="/img/iot.gif" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Sistemas Iot</h5>
+                    <p class="card-text">Temos capacidade de transmissão de dados entre objetos físicos através da internet das coisas.</p>
+                </div>
+            </div>
+            <div class="space"></div>
+            <div class="col">
+                <img style="height: 131px;" src="/img/dese.gif" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Desenvolvimento web e mobile</h5>
+                    <p class="card-text">Utilizamos as tecnologias mais recentes para o desencolcimento web e mobile</p>
+                </div>
+            </div>
+            <div class="space"></div>
+            <div class="col">
+                <img style="height: 131px;" src="/img/cient2.gif" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Sistemas inteligentes e Analise de dados</h5>
+                    <p class="card-text">Com capacidade de criar Sistemas inteligentes e analise de dados levando à automação, produtividade e sustentabilidade</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- <div class="container">
+            <div class="row">
+                <div class="col-sm-auto">
                     <div class="card" style="width: 18rem;">
                         <img style="height: 131px;" src="/img/mentoria.gif" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -79,7 +114,7 @@
                     </div>
                 </div>
                 <div class="space"></div>
-                <div class="col">
+                <div class="col-sm-auto">
                     <div class="card" style="width: 18rem;">
                         <img style="height: 131px;" src="/img/iot.gif" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -89,7 +124,7 @@
                     </div>
                 </div>
                 <div class="space"></div>
-                <div class="col">
+                <div class="col-sm-auto">
                     <div class="card" style="width: 18rem;">
                         <img style="height: 131px;" src="/img/dese.gif" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -98,9 +133,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row" style="width: 288px;">
-                <div class="col">
+                <div class="col-sm-auto">
                     <div class="row row-cols-1 row-cols-md-2">
                         <div class="col mb-4">
                             <div class="card" style="width: 288px;">
@@ -114,7 +147,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </header>
 
     <script src="/js/dom.js"></script>
