--- a/static/about/kevsonfilipe.html
+++ b/static/about/kevsonfilipe.html
@@ -80,7 +80,11 @@
                 </div>
                 <div id="texto">
                     <p>
-                        <br> O Doutor parece ser humano. Ele é espirituoso, concentrado e pode ser confundido com outro homem na rua. Mas ele é um Lorde do Tempo: um alienígena de 900 anos de idade com 2 corações, membro de uma civilização talentosa que dominou a viagem no tempo. <br><br> O Doutor salva planetas para viver – mais um hobby, na verdade, e ele é muito, muito bom nisso.  Sua antiga e não muito confiável nave espacial se assemelha a uma cabine telefônica a T.A.R.D.I.S, mas ela é muito mais do que parece ser.
+                        <br> O Doutor parece ser humano. Ele é espirituoso, concentrado e pode ser confundido com outro homem na rua. Mas ele é um Lorde do Tempo: um alienígena de 900 anos de idade com 2 corações, membro de uma civilização talentosa que dominou a viagem no tempo. 
+                        <br>
+                        <br> Ele dominou 1/3 do JavaScript e bibliotecas com react e react-native. Seus códigos atravessam as camadas do tempo desde o backend até frontend seu próximo objetivo é equipar a sua T.A.R.D.I.S com o interpretador NodeJS.
+                        <br>
+                        <br> O Doutor salva planetas para viver – mais um hobby, na verdade, e ele é muito, muito bom nisso.  Sua antiga e não muito confiável nave espacial se assemelha a uma cabine telefônica a T.A.R.D.I.S, mas ela é muito mais do que parece ser.
                     </p>
                 </div>
                 <div class="text-center redes-sociais-profiles">
