--- a/static/projects/index.html
+++ b/static/projects/index.html
@@ -71,23 +71,31 @@
             <div class="text-center">
                 <h1 class="text-uppercase" style="color: white;">NOSSOS PROJETOS</h1>
                 <hr class="my-4">
-                <div class="card-deck">
+                <div class="card-deck" style="padding: 10px;">
                     <div class="card">
                         <img src="/img/space.gif" class="card-img-top" alt="..." height="300px">
                         <div class="card-body">
                             <h5 class="card-title">Site Uderground DEVs</h5>
                             <p class="card-text">Como primeira proposta para mostrar suas eficiencia a undergrouns iniciou com um projeto próprio, o seu site. Construido usadno tenologias como node JS, JavaScript, bootstrap, HTML 5 e CSS 3</p>
-                            <div class="gol"><p class="statusDev card-text">STATUS&nbsp;| &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; under development</p></div>
+                            <div class="gol bg-warning"><p class="statusDev card-text">STATUS&nbsp;| &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; under development</p></div>
                         </div>
                     </div>
                     <div class="card">
-                            <img src="/img/voiage.gif" class="card-img-top" alt="..." style="height: 300px;">
-                            <div class="card-body">
-                                <h5 class="card-title">Projeto Voyager 1</h5>
-                                <p class="card-text">Como primeira proposta para mostrar suas eficiencia a undergrouns iniciou com um projeto próprio, o seu site. Construido usadno tenologias como node JS, JavaScript, bootstrap, HTML 5 e CSS 3</p>
-                                <div class="gol"><p class="statusDev card-text">STATUS&nbsp;| &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; under development</p></div>
-                            </div>
-                    </div>          
+                        <img src="/img/voiage.gif" class="card-img-top" alt="..." style="height: 300px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Projeto Voyager 1</h5>
+                            <p class="card-text">Como primeira proposta para mostrar suas eficiencia a undergrouns iniciou com um projeto próprio, o seu site. Construido usadno tenologias como node JS, JavaScript, bootstrap, HTML 5 e CSS 3</p>
+                            <div class="gol bg-warning"><p class="statusDev card-text">STATUS&nbsp;| &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; under development</p></div>
+                        </div>
+                    </div>
+                    <!-- <div class="card">
+                        <img src="/img/voiage.gif" class="card-img-top" alt="..." style="height: 300px;">
+                        <div class="card-body">
+                            <h5 class="card-title">Projeto Voyager 1</h5>
+                            <p class="card-text">Como primeira proposta para mostrar suas eficiencia a undergrouns iniciou com um projeto próprio, o seu site. Construido usadno tenologias como node JS, JavaScript, bootstrap, HTML 5 e CSS 3</p>
+                            <div class="gol bg-warning"><p class="statusDev card-text">STATUS&nbsp;| &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; under development</p></div>
+                        </div>
+                    </div>           -->
                 </div>
             </div>
         </div>
