--- a/static/about/allankardec.html
+++ b/static/about/allankardec.html
@@ -80,8 +80,7 @@
                 </div>
                 <div id="texto">
                     <p>
-                        O MALUKO<br>Esse malditinho dorme o dia todo.
-                        Ele gosta muito de não fazer nada, mais faz algo.
+                        O Kardec<br>Prazer meu nome e Allan Kardec, porém prefiro que me chamem de Kardec, sobre mim, eu sou um cara que gosta de muitas brincadeira e gosto tambem de levantar o astral, uma das qualidade que eu me identifico e na hora de resolver problemas, gosto muito de desafios, charadas,quebra cabeças. Minha principal função na comunidade UnderDevs e na parte de finanças porem eu sou responsavel pelo blog.
                     </p>
                 </div>
                 <div class="text-center redes-sociais-profiles">
