--- a/static/about/allankardec.html
+++ b/static/about/allankardec.html
@@ -70,7 +70,7 @@
 
         <section class="team-section text-center w-100 h-100">
             <div class="text-center ">
-                <h2 class="founders-title">O Vagabundo</h2>
+                <h2 class="founders-title">Kaneki-Kard</h2>
             </div>
             <hr>
             <div id="white-div" class="row">
@@ -80,7 +80,7 @@
                 </div>
                 <div id="texto">
                     <p>
-                        O Kardec<br>Prazer meu nome e Allan Kardec, porém prefiro que me chamem de Kardec, sobre mim, eu sou um cara que gosta de muitas brincadeira e gosto tambem de levantar o astral, uma das qualidade que eu me identifico e na hora de resolver problemas, gosto muito de desafios, charadas,quebra cabeças. Minha principal função na comunidade UnderDevs e na parte de finanças porem eu sou responsavel pelo blog.
+                        O Kardec<br>Prazer meu nome e Allan Kardec. <br>Porém prefiro que me chamem de Kardec, sobre mim, eu sou um cara que gosta de muitas brincadeira e gosto tambem de levantar o astral, uma das qualidade que eu me identifico e na hora de resolver problemas, Além de assistir animes aliais meu anime preferido e Tokyo ghoul, me indentifico muito com o personagem principal uma expressão matematica muitas usada nesse anime e 1000-7. te desafio a contar ate chegar a zero, se errar começe novamente hahaha, gosto muito de desafios, charadas, quebra cabeças. <br>Minha principal função na comunidade UnderDevs e na parte de finanças além disso eu sou responsavel pelo blog.
                     </p>
                 </div>
                 <div class="text-center redes-sociais-profiles">
