--- a/static/about/allankardec.html
+++ b/static/about/allankardec.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="CSS/about.css">
     <!--icone do site-->
     <link rel="icon" href="../img/icon.png">
-    <title>O Kaneki-Kard</title>
+    <title>Kaneki-Kard</title>
 </head>
 
 <body id="page-top">
