[UPDATE] - Adding html basic in form for contact

--- a/static/contact/index.html
+++ b/static/contact/index.html
@@ -65,9 +65,27 @@
         </div>
     </nav> 
     <header class="masthead text-center text-white d-flex">
-        <div class="container my-auto">
-           
+        <div class="container">
+        <div class="row justify-content-center">
+            <form>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="inputEmail4">Name</label>
+                        <input type="email" class="form-control" id="inputEmail4" required>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="inputPassword4">Email</label>
+                        <input type="email" class="form-control" id="inputPassword4" required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputAddress">Message</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="Message" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Sign in</button>
+              </form>
         </div>
+    </div>
     </header>
             <!--fim do player de audio-->
     </section>
