--- a/static/contact/index.html
+++ b/static/contact/index.html
@@ -21,6 +21,8 @@
 
     <title>Undergrounds</title>
 
+    <link rel="stylesheet" href="/contact/css/base.css">
+
     <link rel="stylesheet " href="/bootstrap/css/bootstrap.min.css">
     <!--nuvem-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800 ">
@@ -71,16 +73,16 @@
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="inputEmail4">Name</label>
-                        <input type="email" class="form-control" id="inputEmail4" required>
+                        <input type="email" class="form-control" id="inputEmail4" placeholder="Name" required>
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="inputPassword4">Email</label>
-                        <input type="email" class="form-control" id="inputPassword4" required>
+                        <label for="inputName4">Email</label>
+                        <input type="email" class="form-control" id="inputName4" placeholder="Email" required>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputAddress">Message</label>
-                    <input type="text" class="form-control" id="inputAddress" placeholder="Message" required>
+                    <label for="inputMessage">Message</label>
+                    <textarea class="form-control" id="inputMessage" rows="4" placeholder="Message"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Sign in</button>
               </form>
