--- a/static/contact/index.html
+++ b/static/contact/index.html
@@ -84,7 +84,7 @@
                     <label for="inputMessage">Message</label>
                     <textarea class="form-control" id="inputMessage" rows="4" placeholder="Message"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Sign in</button>
+                <button type="submit" class="btn btn-primary">Send</button>
               </form>
         </div>
     </div>
