--- a/static/contact/index.html
+++ b/static/contact/index.html
@@ -34,6 +34,27 @@
     <link rel="stylesheet " href="/css/style.css" media="all">
     <!--icone do site-->
     <link rel="icon" href="img/icon.png">
+
+    <script>
+		function submitEmailForm(form) {
+			var obj = new XMLHttpRequest();
+			obj.onreadystatechange = function(){
+				if(obj.readyState == 4){
+					if(obj.status == 200){
+						var res = JSON.parse(obj.responseText);
+						alert(res.message);
+					}
+					else{
+						alert("Erro ao enviar email" + obj.status + ": " + obj.statusText);
+					}
+				}
+			};
+			obj.open("post", form.action, true);
+			obj.setRequestHeader("Content-Type", "application/json"); // NOTICE: "application/json"
+			obj.send(JSON.stringify({ name: form.name.value, email: form.email.value, message: form.message.value }));
+			return false;
+		}
+	</script>
 </head>
 
 <body id="page-top">
@@ -69,20 +90,20 @@
     <header class="masthead text-center text-white d-flex">
         <div class="container">
         <div class="row justify-content-center">
-            <form>
+            <form action="/ajax/email" method="POST" onsubmit="return submitEmailForm(this);">
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="inputEmail4">Name</label>
-                        <input type="email" class="form-control" id="inputEmail4" placeholder="Name" required>
+                        <label for="inputName4">Name</label>
+                        <input type="text" name="name" class="form-control" id="inputName4" placeholder="Name" required>
                     </div>
                     <div class="form-group col-md-6">
-                        <label for="inputName4">Email</label>
-                        <input type="email" class="form-control" id="inputName4" placeholder="Email" required>
+                        <label for="input4Email4">Email</label>
+                        <input type="email" name="email" class="form-control" id="input4Email4" placeholder="Email" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputMessage">Message</label>
-                    <textarea class="form-control" id="inputMessage" rows="4" placeholder="Message"></textarea>
+                    <textarea class="form-control" name="message" id="inputMessage" rows="4" placeholder="Message"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Send</button>
               </form>
