--- a/static/index.html
+++ b/static/index.html
@@ -67,6 +67,28 @@
     </nav>
     <header class="masthead text-center text-white d-flex">
         <div class="container my-auto">
+
+            <!--Modal com inscrições abertas-->
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content" style="margin-top: 200px;">
+                        <div class="modal-body">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            <div class="row">
+                                <div class="col-lg-10 mx-auto">
+                                    <h1 class="text-lowercase" style="color: black;">VENHA SER UNDERGROUND<br>DEVS</h1>     
+                                </div>
+                            </div>
+                            <button style="border-radius: 10px;" type="button" class="btn btn-secondary" data-dismiss="modal">Inscrções Abertas</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+      
+            <!--Modal com inscrições abertas-->
+
             <div class="row">
                 <div class="col-lg-10 mx-auto">
                     <h1 class="text-uppercase">UNDERGROUND<br>DEVS</h1>
@@ -167,6 +189,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
     <script src="/js/creative.js"></script>
+
+    <script src="/js/modal-inscrições.js"></script>
 
     <!-- Footer -->
     <footer id="footer" class="footer-1">
