[UPDATE] BG gif is now mp4

--- a/static/terms.html
+++ b/static/terms.html
@@ -37,6 +37,7 @@
     <link rel="icon" href="img/icon.png">
 </head>
 <body id="oage-top">
+    <video id="bg" src="/img/bg.mp4" style="min-width: 100%; min-height: 100%; position: absolute; z-index: -1;" autoplay loop muted></video>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="/" style="color: rgb(237,237,237)">
