--- a/static/about/wanghleymartins.html
+++ b/static/about/wanghleymartins.html
@@ -37,8 +37,7 @@
 
 <body id="page-top">
     <body id="page-top">
-        <video id="bg" src="/img/bg.mp4" style="min-width: 100%; min-height: 100%; position: absolute; z-index: -1;" autoplay loop muted></video>
-        <nav class="navbar navbar-dark navbar-expand-lg fixed-top" id="mainNav">
+        <video id="bg" src="/img/bg.mp4" style="width: 100%; height: 100vh; position: fixed; z-index: -1; background-color: black;" autoplay loop muted></video>        <nav class="navbar navbar-dark navbar-expand-lg fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger" href="/" style="color: rgb(237,237,237)">
                     <img id='slogan' src="/img/underground-slogan.png" alt="">
