--- a/static/projects/index.html
+++ b/static/projects/index.html
@@ -37,7 +37,7 @@
 </head>
 
 <body id="page-top" style="background-color: black;">
-    <video id="bg" src="/img/bg.mp4" style="min-width: 100%; min-height: 100%; position: absolute; z-index: -1;" autoplay loop muted></video>
+    <video id="bg" src="/img/bg.mp4" style="width: 100%; height: 100vh; position: fixed; z-index: -1; background-color: black;" autoplay loop muted></video>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="/" style="color: rgb(237,237,237)">
