[update] - modal candidate-se finalisada

--- a/static/index.html
+++ b/static/index.html
@@ -72,17 +72,31 @@
             <!--Modal com inscrições abertas-->
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
-                    <div class="modal-content" style="margin-top: 200px;">
+                    <div class="modal-content" style="margin-top: 50px;">
                         <div class="modal-body">
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                             <div class="row">
                                 <div class="col-lg-10 mx-auto">
-                                    <h1 class="text-lowercase" style="color: black;">VENHA SER UNDERGROUND<br>DEVS</h1>     
+                                    <h1 class="text-lowercase" style="color: black;">VENHA SER UNDERGROUND<br>DEVS</h1>
+                                    <p class="text-justify" style="margin-top: 20px; color: black;">Faça parte da Undeground DEVs Community! Seja um UnderDev e aprenda fazendo, resolvendo problemas do mundo real e sendo membro oficial da comunidade underground! Atinja as profundezas você também! Vagas limitadas!</p>     
                                 </div>
                             </div>
-                            <button style="border-radius: 10px;" type="button" class="btn btn-secondary" data-dismiss="modal">Inscrções Abertas</button>
+                            <script src ="https://form.jotform.com/static/feedback2.js" type="text/javascript"></script><script type="text/javascript">
+                                var JFL_201108212557041 = new JotformFeedback({
+                                  formId: '201108212557041',
+                                  base: 'https://form.jotform.com/',
+                                  windowTitle: 'Candidate-se',
+                                  background: 'rgba(0,0,0,0.48)',
+                                  fontColor: '#FFFFFF',
+                                  type: '2',
+                                  height: 500,
+                                  width: 700,
+                                  openOnLoad: false
+                                });
+                            </script>
+                            <button style="border-radius: 10px;" type="button" class="btn btn-light btn-xl sr-button lightbox-201108212557041" data-dismiss="modal">Inscrções Abertas</button>
                         </div>
                     </div>
                 </div>
