correçao de erros de rotas

--- a/static/services/index.html
+++ b/static/services/index.html
@@ -235,10 +235,10 @@
 
                                             if (audio.paused) {
                                                 audio.play();
-                                                $("#play img").attr("src", "img/Pause.png");
+                                                $("#play img").attr("src", "/img/Pause.png");
                                             } else {
                                                 audio.pause();
-                                                $("#play img").attr("src", "img/Play.png");
+                                                $("#play img").attr("src", "/img/Play.png");
                                             }
                                         }
                                     </script>
